# AprilTagDesktop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle  build_native_win.bat  gradle.properties  jitpack.yml  settings.gradle  target_arch_detect.c
.github/workflows/: build.yml  build_natives.yml  build_natives_publish.yml  cmake.yml  gradle.yml  release-central.yml
RobotCore/: build.gradle
RobotCore/src/main/java/android/opengl/: Matrix.java
RobotCore/src/main/java/org/firstinspires/ftc/robotcore/internal/system/: Assert.java
example/: build.gradle
example/src/main/java/io/github/deltacv/apriltag/example/: AprilTagExample.java
gradle/wrapper/: gradle-wrapper.properties
lib/: README  README.md  libapriltag.dylib  libapriltag_amd64.dylib  libapriltag_arm.dylib  libapriltag_arm64.dylib
src/main/cpp/: AprilTagDetectionJNI.cpp  AprilTagDetectorJNI.cpp
src/main/cpp/apriltag_common/src/: g2d.c  pjpeg.c  workerpool.c  zmaxheap.c
src/main/java/io/github/deltacv/apriltag/: AprilTagLibLoader.java  NativeLibLoader.java  SystemUtil.java
src/main/java/org/openftc/apriltag/: AprilTagDetectorJNI.java  ApriltagDetectionJNI.java
